# mdm-engine

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  REBUILD_SUMMARY.md  REVIEW_BUNDLE.md  REVIEW_BUNDLE_EN.md  SECURITY.md  USAGE_POLICY.md  pyproject.toml  requirements-dashboard.txt
.github/workflows/: ci.yml
ami_engine/adapters/: __init__.py
ami_engine/execution/: __init__.py  executor.py  order_manager.py
ami_engine/features/: __init__.py
config_profiles/: wiki_calibrated.py
core/: fail_safe.py
docs/: ADAPTER_GUIDE.md  ARCHITECTURE.md  AUDIT_LEVELS_AND_PACKETS.md  CALIBRATION_GUIDE.md  CSV_KALIBRASYON_ALANLARI.md  FORMULAS.md  GITHUB_YUKLEME_ADIMLARI.md  INTEGRATION_GUIDE.md  L2_CASE_STUDIES.md  PACKET_SCHEMA_V2.md  PUBLIC_RELEASE_GUIDE.md  QUICKSTART.md  REPO_DOCS_POLICY.md  SAFETY_LIMITATIONS.md  TAVSIYE_CSV_L0_KALIBRASYON_VE_MANTIK.md  TERMINOLOGY.md
examples/: sample_mdm_audit.csv  sample_packets.jsonl
mdm_engine/: __init__.py  audit_spec.py  engine.py  invariants.py
tests/: test_dmc_contract.py  test_invariant_0_domain_agnosticism.py  test_invariant_2_no_cross_core_imports.py  test_invariant_ci_0_workflow_hygiene.py  test_invariant_schema_pin_minor_2.py  test_invariant_version_single_source.py  test_live_audit_flow.py  test_loop_smoke.py  test_pkg_1_no_examples_packaged.py  test_rate_limit.py  test_schema_dependency.py  test_schema_v2.py  test_security_redaction.py  test_trace_output.py
tools/: live_wiki_audit.py  make_review_bundle.py  smoke_test.py  untrack_personal_docs.ps1
visualization/: dashboard.py
(+50 files in other folders)
