[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ami-engine"
version = "0.1.0"
description = "MDM Engine: Market Decision Model runtime with event loop, feature extraction, and reference MDM implementation"
requires-python = ">=3.11"
dependencies = ["numpy>=1.24", "decision-schema>=0.1,<0.2"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ami_engine*"]
